// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Collapse > should render 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    data-testid="Collapse"
    style="height: 0px; opacity: 0; overflow: hidden;"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Collapse > should render with custom scroll 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="custom-scroll"
    data-testid="Collapse"
    style="height: 0px; opacity: 0; overflow: hidden;"
  >
    Test
  </div>
</DocumentFragment>
`;
